<resources>
    <string name="app_name">Food Ordering App</string>
    <string name="application_name">Fooding Heaven</string>
    <string name="app_logo_text">App logo</string>
    <string name="app_motto">Feels like Magic..</string>
    <string name="designer">Designed By:- \nKrishna Agrawal</string>
    <string name="start_background_description">start screen photo</string>
    <string name="app_tagline">Power of Tasty Meals at the palm of your hand</string>
    <string name="login_title">Login to your Account</string>
    <string name="signup_title">Sign Up Here</string>
    <string name="app_permissions">To provide you with the best dining experience, we need your permission to access your device\'s location. By enabling location services, we can offer personalized restaurant recommendations, accurate delivery estimates, and ensure a seamless food delivery experience.</string>
    <string name="hello_blank_fragment">Hello blank fragment</string>
    <string name="default_client_id">748964621753-t5skf98tdfnk7dhc4ulh95uqef0mn19q.apps.googleusercontent.com</string>
</resources>