<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context=".SplashScreen">

    <ImageView
        android:id="@+id/splashActivityAppLogo"
        android:layout_width="228dp"
        android:layout_height="194dp"
        android:layout_marginTop="100dp"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent"
        app:srcCompat="@drawable/logo"
        android:contentDescription="@string/app_logo_text" />

    <TextView
        android:id="@+id/splashActivityAppName"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/application_name"
        android:layout_marginTop="40dp"
        android:textSize="35sp"
        android:fontFamily="@font/yeonsung_regular"
        android:gravity="center"
        app:layout_constraintEnd_toEndOf="@+id/splashActivityAppLogo"
        app:layout_constraintStart_toStartOf="@+id/splashActivityAppLogo"
        app:layout_constraintTop_toBottomOf="@+id/splashActivityAppLogo" />

    <TextView
        android:id="@+id/splashActivityAppMotto"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/app_motto"
        android:textSize="20sp"
        android:fontFamily="@font/yatraone_regular"
        android:gravity="center"
        android:layout_marginTop="10dp"
        app:layout_constraintEnd_toEndOf="@+id/splashActivityAppName"
        app:layout_constraintStart_toStartOf="@+id/splashActivityAppName"
        app:layout_constraintTop_toBottomOf="@+id/splashActivityAppName" />

    <TextView
        android:id="@+id/splashActivityAppDesigner"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/designer"
        android:gravity="center"
        android:textSize="20sp"
        android:layout_marginBottom="30dp"
        android:fontFamily="@font/lato_regular"
        android:textColor="@color/ascent_color"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="@+id/splashActivityAppMotto"
        app:layout_constraintStart_toStartOf="@+id/splashActivityAppMotto" />
</androidx.constraintlayout.widget.ConstraintLayout>