<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context=".SignupActivity">

    <ImageView
        android:id="@+id/signupActivityAppLogo"
        android:layout_width="110dp"
        android:layout_height="110dp"
        android:layout_marginTop="45dp"
        android:contentDescription="@string/app_logo_text"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent"
        app:srcCompat="@drawable/logo" />

    <TextView
        android:id="@+id/signupActivityAppName"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginTop="5dp"
        android:fontFamily="@font/yeonsung_regular"
        android:text="@string/application_name"
        android:textColor="@color/accent_color"
        android:textSize="40sp"
        app:layout_constraintEnd_toEndOf="@id/signupActivityAppLogo"
        app:layout_constraintStart_toStartOf="@id/signupActivityAppLogo"
        app:layout_constraintTop_toBottomOf="@+id/signupActivityAppLogo" />

    <TextView
        android:id="@+id/signupActivityAppTagline"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginTop="2dp"
        android:fontFamily="@font/yeonsung_regular"
        android:text="@string/app_motto"
        android:textColor="@color/accent_color"
        android:textSize="15sp"
        app:layout_constraintEnd_toEndOf="@+id/signupActivityAppName"
        app:layout_constraintStart_toStartOf="@+id/signupActivityAppName"
        app:layout_constraintTop_toBottomOf="@+id/signupActivityAppName" />

    <TextView
        android:id="@+id/signupActivityLoginText"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginTop="20dp"
        android:fontFamily="@font/yatraone_regular"
        android:text="@string/signup_title"
        android:textColor="@color/accent_color"
        android:textSize="25sp"
        app:layout_constraintEnd_toEndOf="@+id/signupActivityAppLogo"
        app:layout_constraintStart_toStartOf="@+id/signupActivityAppLogo"
        app:layout_constraintTop_toBottomOf="@+id/signupActivityAppTagline" />

    <androidx.appcompat.widget.AppCompatEditText
        android:id="@+id/signupActivityName"
        android:layout_width="0dp"
        android:layout_height="47dp"
        android:layout_marginStart="20dp"
        android:layout_marginTop="10dp"
        android:layout_marginEnd="20dp"
        android:background="@drawable/custom_editview"
        android:drawableStart="@drawable/name_icon"
        android:drawablePadding="10dp"
        android:fontFamily="@font/yatraone_regular"
        android:hint="Name"
        android:paddingStart="30dp"
        android:paddingEnd="30dp"
        android:singleLine="true"
        android:textSize="15sp"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/signupActivityLoginText" />

    <androidx.appcompat.widget.AppCompatEditText
        android:id="@+id/signupActivityEmail"
        android:layout_width="0dp"
        android:layout_height="47dp"
        android:layout_marginStart="20dp"
        android:layout_marginTop="10dp"
        android:layout_marginEnd="20dp"
        android:background="@drawable/custom_editview"
        android:drawableStart="@drawable/email_icon"
        android:drawablePadding="10dp"
        android:fontFamily="@font/yatraone_regular"
        android:hint="Email or Phone Number"
        android:paddingStart="30dp"
        android:paddingEnd="30dp"
        android:singleLine="true"
        android:textSize="15sp"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/signupActivityName" />

    <androidx.constraintlayout.widget.ConstraintLayout
        android:id="@+id/signupActivityPasswordLayout"
        android:layout_width="0dp"
        android:layout_height="47dp"
        android:layout_marginStart="20dp"
        android:layout_marginTop="10dp"
        android:layout_marginEnd="20dp"
        android:background="@drawable/custom_editview"
        android:paddingTop="1dp"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@id/signupActivityEmail">

        <androidx.appcompat.widget.AppCompatEditText
            android:id="@+id/signupActivityPasswordEditText"
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:layout_marginStart="20dp"
            android:layout_marginTop="10dp"
            android:layout_marginEnd="50dp"
            android:layout_marginBottom="10dp"
            android:background="@color/white"
            android:drawableStart="@drawable/password_icon"
            android:drawablePadding="15dp"
            android:fontFamily="@font/yatraone_regular"
            android:hint="Password"
            android:inputType="textPassword"
            android:paddingEnd="5dp"
            android:textSize="16sp"
            app:layout_constraintBottom_toBottomOf="parent"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintHorizontal_bias="0.0"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toTopOf="parent"
            app:layout_constraintVertical_bias="0.0" />

        <ImageView
            android:id="@+id/signupActivityShowPasswordButton"
            android:layout_width="0dp"
            android:layout_height="0dp"
            android:layout_marginStart="8dp"
            android:layout_marginTop="2dp"
            android:layout_marginEnd="8dp"
            android:layout_marginBottom="2dp"
            android:clickable="true"
            android:focusable="true"
            app:layout_constraintBottom_toBottomOf="parent"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintStart_toEndOf="@id/signupActivityPasswordEditText"
            app:layout_constraintTop_toTopOf="parent"
            app:srcCompat="@drawable/password_hidden_icon" />

    </androidx.constraintlayout.widget.ConstraintLayout>

    <androidx.constraintlayout.widget.ConstraintLayout
        android:id="@+id/signupActivityConfirmPasswordLayout"
        android:layout_width="0dp"
        android:layout_height="47dp"
        android:layout_marginStart="20dp"
        android:layout_marginTop="10dp"
        android:layout_marginEnd="20dp"
        android:background="@drawable/custom_editview"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.0"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@id/signupActivityPasswordLayout">

        <androidx.appcompat.widget.AppCompatEditText
            android:id="@+id/signupActivityConfirmPasswordEditText"
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:layout_marginStart="20dp"
            android:layout_marginTop="10dp"
            android:layout_marginEnd="50dp"
            android:layout_marginBottom="10dp"
            android:background="@color/white"
            android:drawableStart="@drawable/password_icon"
            android:drawablePadding="15dp"
            android:fontFamily="@font/yatraone_regular"
            android:hint="Confirm Password"
            android:inputType="textPassword"
            android:paddingEnd="5dp"
            android:textSize="16sp"
            app:layout_constraintBottom_toBottomOf="parent"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintHorizontal_bias="0.0"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toTopOf="parent"
            app:layout_constraintVertical_bias="0.0" />

        <ImageView
            android:id="@+id/signupActivityShowConfirmPasswordButton"
            android:layout_width="0dp"
            android:layout_height="0dp"
            android:layout_marginStart="8dp"
            android:layout_marginTop="8dp"
            android:layout_marginEnd="8dp"
            android:layout_marginBottom="8dp"
            android:clickable="true"
            android:focusable="true"
            app:layout_constraintBottom_toBottomOf="parent"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintStart_toEndOf="@id/signupActivityConfirmPasswordEditText"
            app:layout_constraintTop_toTopOf="parent"
            app:srcCompat="@drawable/password_hidden_icon" />

    </androidx.constraintlayout.widget.ConstraintLayout>

    <TextView
        android:id="@+id/signupActivtyContinueText"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginTop="15dp"
        android:fontFamily="@font/yeonsung_regular"
        android:gravity="center_horizontal"
        android:text="Or\nContinue With"
        android:textSize="20dp"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/signupActivityConfirmPasswordLayout" />


    <androidx.appcompat.widget.AppCompatButton
        android:id="@+id/signupActivityGoogleButton"
        android:layout_width="157dp"
        android:layout_height="57dp"
        android:layout_margin="10dp"
        android:background="@drawable/custom_button_white"
        android:drawableStart="@drawable/google_icon"
        android:paddingStart="20dp"
        android:text="Google"
        android:fontFamily="@font/lato_regular"
        android:paddingEnd="3dp"
        android:elevation="10dp"
        android:shadowColor="@color/accent_color"
        android:textAllCaps="false"
        app:layout_constraintEnd_toStartOf="@+id/signupActivityFacebookButton"
        app:layout_constraintHorizontal_bias="0.5"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@id/signupActivtyContinueText" />

    <androidx.appcompat.widget.AppCompatButton
        android:id="@+id/signupActivityFacebookButton"
        android:layout_width="157dp"
        android:layout_height="57dp"
        android:layout_margin="10dp"
        android:background="@drawable/custom_button_white"
        android:drawableStart="@drawable/facebook_icon"
        android:paddingStart="20dp"
        android:text="Facebook"
        android:fontFamily="@font/lato_regular"
        android:paddingEnd="3dp"
        android:elevation="10dp"
        android:shadowColor="@color/accent_color"
        android:textAllCaps="false"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.5"
        app:layout_constraintStart_toEndOf="@+id/signupActivityGoogleButton"
        app:layout_constraintTop_toBottomOf="@id/signupActivtyContinueText" />

    <androidx.appcompat.widget.AppCompatButton
        android:id="@+id/signupActivitySignupButton"
        android:layout_width="157dp"
        android:layout_height="57dp"
        android:layout_marginTop="10dp"
        android:background="@drawable/custom_button"
        android:textColor="@color/white"
        android:fontFamily="@font/lato_bold"
        android:elevation="10dp"
        android:shadowColor="@color/accent_color"
        android:text="Next"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/signupActivityFacebookButton" />

    <TextView
        android:id="@+id/signupActivityAlreayHaveAccount"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginTop="10dp"
        android:clickable="true"
        android:fontFamily="@font/yatraone_regular"
        android:text="Already Have an Account?"
        android:textColor="@color/accent_color"
        android:textSize="15dp"
        app:layout_constraintEnd_toEndOf="@+id/signupActivitySignupButton"
        app:layout_constraintStart_toStartOf="@+id/signupActivitySignupButton"
        app:layout_constraintTop_toBottomOf="@+id/signupActivitySignupButton" />


</androidx.constraintlayout.widget.ConstraintLayout>